[gd_scene load_steps=9 format=3 uid="uid://bvxly7fsdloff"]

[ext_resource type="Texture2D" uid="uid://dr8hs5jc5hytn" path="res://sprites/PNG/Environment/dirt.png" id="1_kpclb"]
[ext_resource type="Script" path="res://scripts/end_screen.gd" id="1_lsg10"]
[ext_resource type="Texture2D" uid="uid://bisd67ojokl4o" path="res://sprites/PNG/Tanks/tankGreen_outline.png" id="2_1ybri"]
[ext_resource type="Texture2D" uid="uid://b4h5dm1gxontt" path="res://sprites/PNG/Tanks/barrelGreen_outline.png" id="3_wu2b2"]
[ext_resource type="Texture2D" uid="uid://ciocqfu3gi1do" path="res://sprites/PNG/Tanks/tracksSmall.png" id="4_ylrql"]
[ext_resource type="FontFile" uid="uid://bq5c0j1txscwj" path="res://sprites/Kenney Future.ttf" id="5_bmg1v"]
[ext_resource type="Texture2D" uid="uid://hop38wcye6et" path="res://sprites/PNG/Buttons/button_rectangle_depth.png" id="6_g8ee0"]
[ext_resource type="Texture2D" uid="uid://b7hh3na2qradi" path="res://sprites/PNG/Buttons/button_rectangle.png" id="7_tnhcr"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lsg10")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_kpclb")
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="WinMessage" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("5_bmg1v")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[center]Player One Won[/center]"
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("2_1ybri")

[node name="TextureRect3" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer2/TextureRect"]
layout_mode = 2
offset_left = 28.5
offset_top = -17.0
offset_right = 52.5
offset_bottom = 41.0
texture = ExtResource("3_wu2b2")

[node name="TextureRect2" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("4_ylrql")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_g8ee0")
texture_pressed = ExtResource("7_tnhcr")

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme_override_colors/default_color = Color(0.340339, 0.340339, 0.340339, 1)
theme_override_fonts/normal_font = ExtResource("5_bmg1v")
text = "Play Again"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_g8ee0")
texture_pressed = ExtResource("7_tnhcr")

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme_override_colors/default_color = Color(0.340339, 0.340339, 0.340339, 1)
theme_override_fonts/normal_font = ExtResource("5_bmg1v")
text = "Quit"
fit_content = true
scroll_active = false
autowrap_mode = 0

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
